# end-to-end-mle-challenge

./: .gitignore  ASSIGNMENT.md  Dockerfile  EXTRA_ANALYSIS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  validate_predictions.py
app/: api.py  db.py  training.py
docs/: README.md  SOLUTION.md
test/: test_api.py
